changed bg color

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,5 +1,5 @@
 /*-- scss:defaults --*/
 
 body {
-  background: linear-gradient(to left, #93A5CF, #E4EfE9, #93A5CF);
+  background: linear-gradient(to left, #FAF9F6, #E4EfE9, #FAF9F6);
 }
